# RayBNN_Optimizer

./: Cargo.toml  README.md
src/: lib.rs
src/Continuous/: GD.rs  LR.rs  Loss.rs  mod.rs
src/Discrete/: Classification.rs  Loss.rs  mod.rs
src/Hidden/: Sphere.rs
src/Input/: Sphere.rs
src/Util/: Math.rs  mod.rs
tests/: test_classification.rs  test_collision_batch.rs  test_collision_minibatch.rs  test_collision_minibatch2.rs  test_collision_serial.rs  test_gd.rs  test_gd2.rs  test_gd3.rs  test_generate.rs  test_generate2.rs  test_input.rs  test_input2.rs  test_loss.rs  test_math.rs
