[package]
name = "RayBNN_Cell"
version = "0.1.2"
authors = ["Brosnan Yuen <brosnanyuen@gmail.com>"]
edition = "2021"
description = "Cell Position Generator for RayBNN"
readme = "README.md"
repository = "https://github.com/BrosnanYuen/RayBNN_Cell"
keywords = ["raytracer","raytracing","ray-tracing","CUDA","OpenCL"]
license = "GPL-3.0-only"
categories = ["science"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.7.0"
num = "0.4.1"
num-traits = "0.2.16"
half = { version = "2.3.1" , features = ["num-traits"] }
rand = "0.8.5"
RayBNN_DataLoader = "0.1.3"

[dev-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.7.0"
num = "0.4.1"
num-traits = "0.2.16"
half = { version = "2.3.1" , features = ["num-traits"] }
rand = "0.8.5"
RayBNN_DataLoader = "0.1.3"

[build-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.7.0"
num = "0.4.1"
num-traits = "0.2.16"
half = { version = "2.3.1" , features = ["num-traits"] }
rand = "0.8.5"
RayBNN_DataLoader = "0.1.3"

[lib]
name = "RayBNN_Cell"
path = "src/lib.rs"




